@@ -15,6 +15,8 @@ import org.springframework.http.*;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
@@ -58,78 +60,51 @@ public class BitrixService {
      */
     public LeadResponse invioLavorato(LeadRequest request) {
         String url = baseUrl + "/partner-api/v5/worked";
+        int maxRetry = 3;
 
-        // ✅ Header corretti
+        // 📦 Prepara headers base
         HttpHeaders headers = getBearerAuthHeaders();
-        headers.setContentType(MediaType.valueOf("application/json;charset=UTF-8"));
-        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
 
-        // ✅ Configura ObjectMapper per LocalDateTime e formati corretti
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new JavaTimeModule());
-        mapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
-
-        String jsonBody;
+        // 🧾 Log JSON prima dell'invio
         try {
-            jsonBody = mapper.writeValueAsString(request);
+            ObjectMapper mapper = new ObjectMapper();
+            mapper.registerModule(new JavaTimeModule());
+            String json = mapper.writerWithDefaultPrettyPrinter().writeValueAsString(request);
             logger.info("📤 Invio a Enel [{}]", url);
-            logger.info("📦 Body JSON inviato:\n{}", mapper.writerWithDefaultPrettyPrinter().writeValueAsString(request));
+            logger.info("📦 Body JSON inviato:\n{}", json);
         } catch (JsonProcessingException e) {
             logger.error("❌ Errore serializzazione JSON del request: {}", e.getMessage());
-            LeadResponse error = new LeadResponse();
-            error.setSuccess(false);
-            error.setMessage("Errore serializzazione JSON: " + e.getMessage());
-            return error;
         }
 
-        // ✅ Corpo come stringa per evitare problemi di conversione automatica
-        HttpEntity<String> entity = new HttpEntity<>(jsonBody, headers);
+        // ✅ Entità JSON
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        HttpEntity<LeadRequest> jsonEntity = new HttpEntity<>(request, headers);
 
-        // ✅ Assicuriamoci che RestTemplate gestisca JSON
-        if (restTemplate.getMessageConverters().stream()
-                .noneMatch(c -> c instanceof MappingJackson2HttpMessageConverter)) {
-            restTemplate.getMessageConverters().add(new MappingJackson2HttpMessageConverter());
-        }
-
-        int maxRetry = 3;
         for (int attempt = 1; attempt <= maxRetry; attempt++) {
             try {
-                logger.info("📨 Invio contatto lavorato (tentativo {}): {}", attempt, request);
-
-                ResponseEntity<LeadResponse> response = restTemplate.postForEntity(url, entity, LeadResponse.class);
+                logger.info("📨 Invio contatto lavorato (JSON) tentativo {}: {}", attempt, request);
+                ResponseEntity<LeadResponse> response = restTemplate.postForEntity(url, jsonEntity, LeadResponse.class);
 
                 if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
-                    logger.info("✅ Invio contatto riuscito al tentativo {}", attempt);
+                    logger.info("✅ Invio contatto riuscito in formato JSON al tentativo {}", attempt);
                     return response.getBody();
                 } else {
-                    logger.warn("⚠️ Risposta non valida da Enel ({}): {}",
-                            response.getStatusCode(), response.getBody());
+                    logger.warn("⚠️ Risposta non valida da Enel ({}): {}", response.getStatusCode(), response.getBody());
                 }
-
             } catch (HttpClientErrorException e) {
                 logger.error("❌ Errore HTTP {} al tentativo {}: {}", e.getStatusCode(), attempt, e.getMessage());
-                if (e.getStatusCode() == HttpStatus.UNSUPPORTED_MEDIA_TYPE) {
-                    logger.error("❗ Verifica Content-Type e formato JSON");
-                }
-                if (attempt == maxRetry) {
-                    LeadResponse error = new LeadResponse();
-                    error.setSuccess(false);
-                    error.setMessage("Errore HTTP dopo " + maxRetry + " tentativi: " + e.getMessage());
-                    return error;
-                }
 
+                // 🔁 Se l'errore è 415 → fallback su form-data
+                if (e.getStatusCode() == HttpStatus.UNSUPPORTED_MEDIA_TYPE) {
+                    logger.warn("🔄 Errore 415: passo automaticamente a invio form-data...");
+                    return invioLavoratoForm(request); // ⬅️ fallback automatico
+                }
             } catch (Exception e) {
                 logger.error("❌ Errore generico al tentativo {}: {}", attempt, e.getMessage());
-                if (attempt == maxRetry) {
-                    LeadResponse error = new LeadResponse();
-                    error.setSuccess(false);
-                    error.setMessage("Errore chiamata API dopo " + maxRetry + " tentativi: " + e.getMessage());
-                    return error;
-                }
-
             }
 
-            // ⏳ Backoff progressivo
+            // ⏱️ Backoff progressivo
             try {
                 Thread.sleep(1000L * attempt);
             } catch (InterruptedException ie) {
@@ -140,7 +115,68 @@ public class BitrixService {
 
         LeadResponse fallback = new LeadResponse();
         fallback.setSuccess(false);
-        fallback.setMessage("Errore imprevisto dopo tentativi multipli");
+        fallback.setMessage("Errore chiamata API dopo " + maxRetry + " tentativi (JSON)");
+        return fallback;
+    }
+
+
+    private LeadResponse invioLavoratoForm(LeadRequest request) {
+        String url = baseUrl + "/partner-api/v5/worked";
+
+        HttpHeaders headers = getBearerAuthHeaders();
+        headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+
+        boolean usaDescrizioneResultCode = false; // <-- metti a false se Enel vuole "D109"
+
+        MultiValueMap<String, String> form = new LinkedMultiValueMap<>();
+        form.add("workedCode", request.getWorkedCode());
+        form.add("worked_Date", request.getWorked_Date() != null ? request.getWorked_Date().toString() : "");
+        form.add("worked_End_Date", request.getWorked_End_Date() != null ? request.getWorked_End_Date().toString() : "");
+        form.add("caller", request.getCaller());
+        form.add("workedType", request.getWorkedType());
+        form.add("campaignId", request.getCampaignId() != null ? request.getCampaignId().toString() : "");
+        form.add("contactId", request.getContactId() != null ? request.getContactId().toString() : "");
+        form.add("chatHistory", request.getChatHistory());
+
+        if (request.getResultCode() != null) {
+            String resultValue = usaDescrizioneResultCode
+                    ? request.getResultCode().getEsito()
+                    : request.getResultCode().name();
+            form.add("resultCode", resultValue);
+        }
+
+        HttpEntity<MultiValueMap<String, String>> entity = new HttpEntity<>(form, headers);
+
+        int maxRetry = 3;
+        for (int attempt = 1; attempt <= maxRetry; attempt++) {
+            try {
+                logger.info("📨 Invio contatto lavorato (form) tentativo {}: {}", attempt, request);
+                logger.info("📦 Form inviato:\n{}", form);
+
+                ResponseEntity<LeadResponse> response = restTemplate.postForEntity(url, entity, LeadResponse.class);
+
+                if (response.getStatusCode().is2xxSuccessful() && response.getBody() != null) {
+                    logger.info("✅ Invio contatto riuscito in formato form-data al tentativo {}", attempt);
+                    return response.getBody();
+                } else {
+                    logger.warn("⚠️ Risposta non valida da Enel ({}): {}", response.getStatusCode(), response.getBody());
+                }
+            } catch (Exception e) {
+                logger.error("❌ Errore al tentativo {} (form-data): {}", attempt, e.getMessage());
+            }
+
+            try {
+                Thread.sleep(1000L * attempt);
+            } catch (InterruptedException ie) {
+                Thread.currentThread().interrupt();
+                break;
+            }
+        }
+
+        LeadResponse fallback = new LeadResponse();
+        fallback.setSuccess(false);
+        fallback.setMessage("Errore chiamata API dopo " + maxRetry + " tentativi (form-data)");
         return fallback;
     }
 
